--- a/thesis/nphard.tex
+++ b/thesis/nphard.tex
@@ -1,7 +1,7 @@
 \subsection{Is k-cleared-cells NP-hard?}
 \label{sub:nphard}
 
-We prove that k-cleared-cells is NP-hard by constructing a reduction from the \textit{Subset sum} problem. The reduction consists of two parts: one part which considers $K > 1$ in the given \textit{Subset sum} instance, and one part which considers the special case $K = 1$. The first part is more complex and consists of five phases, whereas the second part is relatively straightforward.
+We prove that k-cleared-cells is NP-hard by constructing a reduction from the \textit{Subset sum} problem. The reduction consists of two parts: one part which considers $K > 1$ in the given \textit{Subset sum} instance, and one part which considers the special case $K = 1$. The first part is quite complex and consists of five phases, whereas the second part is relatively straightforward.
 
 The goal of each part is to prove the following: 
 
@@ -10,6 +10,7 @@ Given a \textit{Subset sum} instance $Q = \{q_1, \ldots, q_a\}, K \in \mathbb{N}
 \end{quote}
 
 For the general case $K > 1$, we set $k = 8a + 5 \sum Q + 4 + 4K$. For the special case $K = 1$, we set $k = 4$. The block states $P_i$ in $G$ are determined from $Q$ and $K$. This transformation is described in detail in later sections. 
+
 \input{thesis/gameboard.tex}
 
 The following lemma will be used during the whole reduction and explains an important property of the terrain we use in the initial gameboard.\\
