--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -53,7 +53,11 @@
 
 \iaddress{\caddress}
 \makeititle
+\begin{abstract}
+\input{thesis/abstract.tex}
+\end{abstract}
 
+\newpage
 \tableofcontents
 \newpage
 
