--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,8 +1,6 @@
 \section{Introduction}
 
-In this report a simplified model of the video game Lumines is shown to be NP-complete. The goal in this model is to clear as many cells as possible. The model is therefore similar to the original video game, but with a few added constrains. The model is proven to be in $NP$ and also a reduction from \textit{Subset sum} to the game mode is presented. 
-
-In recent years a number of studies concerning computational complexity in video games has been conducted. 
+In recent years a number of studies concerning computational complexity in video games has been conducted. The studies have been on all kinds of genres, from platformers to puzzle games. So far these studies seem to have ignored the popular puzzle game Lumines. In this report a simplified model of Lumines is constructed. A decision problem is then formulated in the model. The decision problem is proven to be in NP. A reduction from the NP-complete \textit{Subset sum} to the game model is then presented, showing that the simplified version of Lumines is NP-complete. 
 
 \subsection{The game}
 The video game Lumines was released in December 2004 in Japan for the PSP platform. The game was a major success for the developer Q Entertainment, and has since its original release been followed with a couple of sequels \cite{wiki:lumines}.
