--- a/thesis/formal.tex
+++ b/thesis/formal.tex
@@ -67,10 +67,10 @@ A \textit{trajectory} $\tau$ of a block $P$ is a finite sequence of (legal) game
             \item If any filled cell $\langle i,j \rangle$ in $B'$ and its surrounding cells $\langle i+1,j+1 \rangle$, $\langle i, j+1 \rangle$ and $\langle i+1, j \rangle$ are the same color, these cells are marked and cleared instantly. Any filled cells in $B'$ not directly above other filled cells or the bottom row now drops until they are. This stage is repeated until a further step would not result in any changes on the gameboard. $B'$ is now the results of these steps.
     \end{enumerate}
 
-A \textit{game} $(B_0, P_1, \ldots, P_p)$ is defined as an initial gameboard and a sequence of blocks to be placed by the player. A \textit{trajectory sequence} $\phi$ is a sequence $(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$ which for each $i$ the trajectory $\tau_i$ applied to the game block $P_i$ on the gameboard $B_{i-1}$ results in gameboard $B_i$. If $\phi$ contains any trajectory $\tau_q$ which triggers a game over, $\phi$ naturally terminates at $B_q$ instead of $B_p$.
+A \textit{game} $\mathcal{G} = (B_0, P_1, \ldots, P_p)$ is defined as an initial gameboard and a sequence of blocks to be placed by the player. A \textit{trajectory sequence} $\phi = (B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$ is a sequence in which for each $i$ the trajectory $\tau_i$ applied to the game block $P_i$ on the gameboard $B_{i-1}$ results in the gameboard $B_i$. If $\phi$ contains any trajectory $\tau_q$ which puts the game in a losing state, $\phi$ naturally terminates at $B_q$ instead of $B_p$.
 
 \subsection{Alternating rows}
-Simply put, a column contains \textit{alternating rows} in an interval if every filled cell has a different color from the adjacent cells in the same interval. A more rigorous definition is presented below.
+Simply put, a column contains \textit{alternating rows} in an interval if every filled cell has a different color from the adjacent cells in the same interval. More rigorous definitions are presented below.
 
 \begin{defn}
 If every cell in $\langle r, c \rangle, \; r \in \{a, \ldots, b\}, \; |b-a| \geq 1$ is filled and has one color if $r \equiv a \pmod{2}$, and another color if $r \equiv a + 1 \pmod{2}$, the interval $\left[ a, b \right]$ is said to be alternating in column $c$.
@@ -93,13 +93,13 @@ The notion of checkable and acyclic goals is presented in paper by \citeauthor{t
 
 \begin{defn}
 \label{defn:checkable}
-We say that an objective function $\Phi$ is \textit{checkable} when, given a a game $G$ and a trajectory sequence $\phi$, we can compute the truth value of $\Phi(G, \phi)$ in time $\text{poly}(|G|, |\phi|)$.
+We say that an objective function $\Phi$ is \textit{checkable} when, given a a game $\mathcal{G}$ and a trajectory sequence $\phi$, we can compute the truth value of $\Phi(\mathcal{G}, \phi)$ in time $\text{poly}(|\mathcal{G}|, |\phi|)$.
 \end{defn}
 
 \bigbreak
 
 \begin{defn}
-We say that an objective function $\Phi$ is \textit{acyclic} when, for all games $G$, if there is a trajectory sequence $\phi$ so that $\Phi(G, \phi)$ holds, then there is a trajectory sequence $\phi'$ so that $\Phi(G, \phi')$ holds and there are no repeated piece states in $\phi'$.
+    We say that an objective function $\Phi$ is \textit{acyclic} when, for all games $\mathcal{G}$, if there is a trajectory sequence $\phi$ so that $\Phi(\mathcal{G}, \phi)$ holds, then there is a trajectory sequence $\phi'$ so that $\Phi(\mathcal{G}, \phi')$ holds and there are no repeated piece states in $\phi'$.
 \end{defn}
 
 \subsection{The k-cleared-cells problem}
@@ -108,5 +108,5 @@ The Lumines goal this paper is concerned with is the problem of maximizing the a
 The problem is formally defined as follows:
 
 \begin{quote}
-\textbf{The (offline, no-rotation, acyclic) k-cleared-cells problem}: Given a Lumines game $G=(B_0, P_1, \ldots, P_p)$ and a goal $k \in \mathbb{N}$, does there exist an acyclic trajectory sequence $\phi=(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$, such that when $\phi$ is applied to $G$ at least $k$ cells are cleared in total?
+    \textbf{The (offline, no-rotation, acyclic) k-cleared-cells problem}: Given a Lumines game $\mathcal{G} = (B_0, P_1, \ldots, P_p)$ and a goal $k \in \mathbb{N}$, does there exist an acyclic trajectory sequence $\phi=(B_0, \tau_1, B_1, \ldots ,\tau_p, B_p)$, such that when $\phi$ is applied to $\mathcal{G}$ at least $k$ cells are cleared in total?
 \end{quote}
