--- a/thesis/formal.tex
+++ b/thesis/formal.tex
@@ -11,7 +11,7 @@ This formalization of Lumines follows the methodology of \citeauthor{tetris} in 
 
     \item[Game blocks] In Lumines the player can only manipulate $2 \times 2$ squares of cells called \textit{blocks}. The attributes of a block in play is defined as a \emph{block state P}.It is 3-tuple, consisting of: 
     \begin{enumerate}
-        \item \emph{block colors}, a 4-tuple $\in \{B,W\}^4$ corresponding to the corner colors of the block, counted clockwise from the lower-left corner. The six blocks core blocks pictured in \hyperref[fig:pieces]{figure \ref*{fig:pieces}} correspond to the following piece colors:
+        \item \emph{block colors}, a 4-tuple $\in \{B,W\}^4$ corresponding to the corner colors of the block, counted clockwise from the lower-left corner. The six blocks core blocks pictured in \hyperref[fig:pieces]{figure \ref*{fig:pieces}} correspond to the following block colors:
 
         \begin{description}
             \item[MW] $(W,W,W,W)$
