--- a/thesis/formal.tex
+++ b/thesis/formal.tex
@@ -88,6 +88,8 @@ If every cell in $\langle r, c \rangle, \; r \in \{a, \ldots, b\}, \; |b-a| \geq
 If every cell in $\langle r, c \rangle, \; r \in \{a, \ldots, b\}, \; |b-a| \geq 1$ is white if $r \equiv a \pmod{2}$, and black if $r \equiv a + 1 \pmod{2}$, the interval $\left[ a, b \right]$ is said to be alternating white-black in column $c$.
 \end{defn}
 
+For sake of completeness, every interval of length 0 and 1 is considered to be both alternating, alternating black-white and alternating white-black.
+
 \subsection{Checkable and acyclic goals}
 The notion of checkable and acyclic goals is presented in paper by \citeauthor{tetris}. These definitions will aid the proof presented later in this report. They are used in a similar manner in the original paper.\\
 
