--- a/thesis/gameboard.tex
+++ b/thesis/gameboard.tex
@@ -27,7 +27,7 @@ The initial gameboard $B_0$ in the constructed \textit{k-cleared-cells} instance
     \label{fig:initial}
 \end{figure}
 
-A schematic of the well structure is pictured in~\autoref{fig:wells}. Column 5 of the well is empty, the content in the other columns depends on which section the rows are in. A well is divided into the following three sections:
+A schematic of the well structure is pictured in~\autoref{fig:wells}. Please note that the two top rows, denoted \textit{initial block section}, will from here on not be considered part of the well for sake of simplicity. Column 5 of the well is always empty, the content in the other columns depends on which section the rows are in. A well is divided into the following three sections:
 
 \begin{itemize}
 \item The bottom section consists of rows in the interval $\left[ 1, 2 \left( K+1 \right) \right]$. In this section, column 1 is alternating white-black, column 2 is alternating black-white, column 3 is white, and column 4 is black.
@@ -67,7 +67,7 @@ A schematic of the well structure is pictured in~\autoref{fig:wells}. Column 5 o
         {\huge Top section};
         \draw [decorate,decoration={brace,amplitude=10pt},xshift=-12pt,yshift=0pt]
         (0, 16) -- (0, 18) node [left, align=right,black,midway,xshift=-1cm]
-        {\huge Initial block row};
+        {\huge Initial block section};
         \draw (3.5, 0.5) -- (7, 0.5) node [right, black, xshift=1cm] 
         {\huge row 1};
         \draw (3.5, 6.5) -- (7, 6.5) node [right, black, xshift=1cm, yshift=-1.5cm]
