--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -138,7 +138,7 @@ Thus all parts of the lemma holds.
     \label{fig:placement}
 \end{figure}
 
-Assuming that no blocks has been place such that any well is permanently closed, the following invariants holds at the start of the sequence corresponding to $q_i$:
+Assuming that no blocks has been placed such that any well is blocked, the following invariants holds at the start of the sequence corresponding to $q_i$:
 
 \begin{enumerate}
 \item Either both of the wells are closed, or both of the wells are open.
