--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -145,7 +145,7 @@ Assuming that no blocks has been placed such that any well is blocked, the follo
 
 \item Column 1, 3 and 5 in any well are unchanged from the initial gameboard. Column 2 is unchanged except from the top two rows (which may be black or empty).
 
-\item Let $q_0 = 0$. This does not change the semantics of the givet \textit{Subset sum} instance. Then in total 
+\item Let $q_0 = 0$. This does not change the semantics of the given \textit{Subset sum} instance. Then in total 
 \begin{equation*}
     2 \left( i-1 \right) + \sum_{j=0}^{i-1} q_j
 \end{equation*}
